<?xml version="1.0"?>
<package>
  <name>optitrack</name>
  <version>0.1.0</version>
  <description>The optitrack package</description>
  
  <maintainer email="fsuarez.ruiz@pmail.ntu.edu.sg">Francisco Suarez Ruiz</maintainer>
  <license>BSD</license>
  <author email="fsuarez.ruiz@pmail.ntu.edu.sg">Francisco Suarez Ruiz</author>
  <url type="website">http://github.com/crigroup/optitrack</url>
  <url type="bugtracker">http://github.com/crigroup/optitrack/issues</url>
  <url type="repository">http://github.com/crigroup/optitrack</url>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>std_msgs</build_depend>
  
  <run_depend>geometry_msgs</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>tf</run_depend>
  
  <!-- Message generation -->
  <build_depend>message_generation</build_depend>
  <run_depend>message_runtime</run_depend>
  
  <export>
    <rosdoc config="rosdoc.yaml" />
  </export>

</package>
